--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-hello world
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="cache-control" content="max-age=0" />
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
+  <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <title>Katie.js | Query JSON objects using SQL statements </title>
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.0.5/es5-shim.min.js" type="text/javascript"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.0.5/es5-sham.min.js" type="text/javascript"></script>
+  <script src="./vendor/sql-parser.js" type="text/javascript"></script>
+  <script src="./demo-data-50.js" type="text/javascript"></script>
+  <script src="./katie.js" type="text/javascript"></script>
+</head>
+<body>
+  <div style="position: fixed; top:0; right: 0; width: 120px; height: 120px; z-index: 101">
+    <a href="http://github.com/davidxi/katie"><img src="./fork-me-icon.png" width="120" height="120" /></a>
+  </div>
+  <div class="container-fluid">
+    <form>
+      <div class="form-group">
+        <div class="col-sm-10">
+          <textarea class="form-control" id="stmtInput">SELECT profileName, productId, score, summary FROM reviews WHERE score < 4.5 OR summary LIKE 'good' ORDER BY score ASC</textarea>
+          <p class="text-info"><b>Note: 'reviews' is the name of the data source in this demo, and its name can not be changed.</p>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-12">
+          <button type="button" class="btn btn-primary" onclick="run()">Run</button>
+        </div>
+      </div>
+    </form>
+    <table class="table table-striped table-condensed">
+      <thead>
+        <tr>
+          <th>profileName</th>
+          <th>productId</th>
+          <th>score</th>
+          <th>summary</th>
+        </tr>
+      </thead>
+      <tbody id="resultsOutput">
+      </tbody>
+    </table>
+  </div>
+<script type="text/javascript">
+function run() {
+  var input = document.getElementById('stmtInput').value.trim();
+  try {
+
+    var output = document.getElementById('resultsOutput');
+    while (output.hasChildNodes()) {
+      output.removeChild(output.lastChild);
+    }
+
+    var results = Katie.parse(input);
+
+    var html = results.map(function(item) {
+      var str = [];
+      str.push('<tr>');
+      str.push('<td>' + item.profileName + '</td>');
+      str.push('<td>' + item.productId + '</td>');
+      str.push('<td>' + item.score + '</td>');
+      str.push('<td>' + item.summary + '</td>');
+      str.push('</tr>')
+      return str.join('');
+    }).join('');
+    output.innerHTML = html;
+
+  } catch (e) {
+    alert(e);
+  }
+}
+run();
+</script>
+</body>
+</html>
